--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
 huggingface_hub[hf_xet]
 torch
-tokenizers>=0.10.1
-transformers==4.3.3
+tokenizers>=0.14.1
+transformers
 pypdf
 python-docx
 python-pptx
